# Lucid-Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: AssetPipeline.md  BuildSystem.md  ControlPanelDesign.md  EcsSerialization.md  ExecutionPlan.md  LucidEngineOverview.md  LucidEngineSecurity.md  LucidFileFormats.md  LucidVersionControll.md  MasterPlan.md  SecurityKeyGuide.md
kernel/include/: lge_api.h
kernel/src/core/: kernel.cpp
tools/: bootstrap_main.cpp  download_externals.ps1
